# baml-streaming-demo

./: .env.example  .gitignore  DEMO_RESULTS.md  README.md  RESULTS_REPORT.md  baml_streaming.py  baml_streaming_helpers.py  complex_employee_demo.py  conceptual_fast_transition_demo.py  demo.py  demo_showcase.py  elegant_streaming_demo.py  fast_transition_processor.py  pyproject.toml  run_demo.py  schema_showcase.py  simple_streaming_test.py  streaming_demo_with_fallback.py  streaming_simulation.py  test_imports.py  test_state_tracking.py  test_streaming_states.py  user_profile_schema.py
baml_client/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: baml.toml  main.baml
src/: streaming_demo.py
